# opencherry

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  justfile
.antigravitycli/: 9ec70b5a-345f-4e48-ab48-41fbf14004fd.json
.github/workflows/: ci.yml  release-linux.yml  release-macos.yml  release-windows.yml
apps/desktop/: .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
apps/desktop/e2e/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  wdio.conf.ts
apps/desktop/e2e/specs/: agents-real.e2e.ts  fixtures-flow.e2e.ts  smoke.e2e.ts
apps/desktop/src/: App.test.tsx  App.tsx  ConfirmDialog.test.tsx  ConfirmDialog.tsx  SettingsDialog.test.tsx  SettingsDialog.tsx  index.tsx  styles.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/templates/: opencherry.desktop
apps/desktop/src/theme/: apply.test.ts  apply.ts  context.test.tsx  context.tsx  tokens.ts  types.ts  validate.test.ts  validate.ts
apps/desktop/src/theme/builtin/: catppuccin.json  dracula.json  gruvbox.json  index.ts  nord.json  one-dark.json  opencherry-default.json  solarized.json  tokyo-night.json
apps/website/: package.json  pnpm-lock.yaml  wrangler.toml
apps/website/src/components/: Hero.astro  InstallGuide.astro  InteractiveDemo.tsx
apps/website/src/layouts/: Layout.astro
apps/website/src/pages/: index.astro
apps/website/src/styles/: global.css
crates/opencherry/: Cargo.toml
crates/opencherry/src/: main.rs
crates/opencherry_agents/: Cargo.toml
crates/opencherry_agents/src/: lib.rs
crates/opencherry_core/: Cargo.toml
crates/opencherry_core/src/: lib.rs
crates/opencherry_persistence/: Cargo.toml
crates/opencherry_persistence/src/: lib.rs
crates/opencherry_repo/: Cargo.toml
crates/opencherry_repo/src/: lib.rs
docs/: session-notes.md
docs/roadmap/: next-git-ux.md
packaging/aur/: PKGBUILD  README.md
packaging/homebrew/: README.md  opencherry.rb
packaging/winget/: README.md
resources/: default_agents.json
scripts/: build-appimage.sh  build-deb.sh  build-macos.sh  build-windows.ps1  install.sh  setup.sh
