[workspace]
resolver = "2"
members = [
    "apps/desktop/src-tauri",
    "crates/opencherry_core",
    "crates/opencherry_repo",
    "crates/opencherry_agents",
    "crates/opencherry_persistence",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["anrry"]
repository = "https://github.com/4nrry/opencherry"
rust-version = "1.80"

[workspace.dependencies]
# Local crates
opencherry_core = { path = "crates/opencherry_core" }
opencherry_repo = { path = "crates/opencherry_repo" }
opencherry_agents = { path = "crates/opencherry_agents" }
opencherry_persistence = { path = "crates/opencherry_persistence" }

# Tauri 2
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"

# Error handling / logging
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Git (primary: git2 vendored libgit2; gix added later for batch reads)
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }

# Process detection
sysinfo = "0.32"

# Async
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "process", "io-util"] }

# Filesystem watching
notify = "7"
notify-debouncer-full = "0.4"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
