[package]
name = "opencherry"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "OpenCherry: orchestrate multiple Git repos across multiple AI coding agents."

[[bin]]
name = "opencherry"
path = "src/main.rs"

[dependencies]
opencherry_core = { workspace = true }
opencherry_repo = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
