[package]
name = "opencherry_agents"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Detection and orchestration of AI coding agents for OpenCherry."

[dependencies]
opencherry_core = { workspace = true }
sysinfo = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
