[package]
name = "opencherry_persistence"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "JSON-backed config persistence for OpenCherry (Sprint 1)."

[dependencies]
opencherry_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
