[package]
name = "opencherry_repo"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Git repository operations for OpenCherry (git2-backed, gix optional)."

[dependencies]
opencherry_core = { workspace = true }
git2 = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
