[package]
name = "opencherry-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "OpenCherry desktop app — multi-repo × multi-agent control tower."

[lib]
name = "opencherry_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "opencherry-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true }
tauri-plugin-opener = { workspace = true }
tauri-plugin-dialog = { workspace = true }

opencherry_core = { workspace = true }
opencherry_repo = { workspace = true }
opencherry_agents = { workspace = true }
opencherry_persistence = { workspace = true }

git2 = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
